# precorrect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
benchmark/: last_run.json  run_benchmark.py
examples/: 01_openai.py  02_anthropic.py  03_discover.py  04_build_your_moat.py  05_evaluate.py
examples/promptfoo/: promptfoo.yaml  provider.py
precorrect/: __init__.py  core.py  discover.py  evaluate.py  lens.py
rules/: critical_reasoning.yaml  example_generic.yaml  template.yaml
tests/: test_core.py  test_evaluate.py  test_lens.py
