[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precorrect"
dynamic = ["version"]
description = "A generation-time correction layer for LLMs — debias before you generate, not after."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Claudio De Genua" }]
keywords = ["llm", "bias", "correction", "rag", "ai", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []          # zero hard deps; pyyaml is optional for .yaml rule files
optional-dependencies = { yaml = ["pyyaml>=6"] }

[project.urls]
Homepage = "https://teocentro.com/about/methodology/llm-bias-removal/"
Repository = "https://github.com/claudiodegenua/precorrect"
"Bug Tracker" = "https://github.com/claudiodegenua/precorrect/issues"
Documentation = "https://github.com/claudiodegenua/precorrect#readme"

[tool.setuptools.dynamic]
version = { attr = "precorrect.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["precorrect*"]

[tool.setuptools.package-data]
precorrect = ["py.typed"]
